archived/tests/interpreter/errors/too_many_args.err
error[I002]: function f expects 2 arguments, got 3
  --> tests/interpreter/errors/too_many_args.mochi:3:1

  3 | f(1, 2, 3)
    | ^

help:
  Pass exactly %d arguments to `%s`.
